Fixed bug #42237 (stream_copy_to_stream returns invalid values for mmaped streams).